refactor test methods